# oopllama

./: .gitignore  Cargo.toml  Dockerfile  README.md  alice.txt  clean_dataset.py  clean_hail_mary.py  clean_perfect.py  docker-compose.yaml  download_model.sh  extract_book.py  hail_mary_clean.txt  hail_mary_perfect.txt  input.txt  master_training_data.txt  mega_extractor.py  nova_personality.py  nova_personality_data.txt
src/: agent.rs  custom_model.rs  engine.rs  lib.rs  main.rs  memory.rs  tests.rs  tools.rs  train.rs
