[package]
name = "oopllama"
version = "0.1.0"
edition = "2021"
default-run = "oopllama"

[[bin]]
name = "oopllama"
path = "src/main.rs"

[[bin]]
name = "train_nova"
path = "src/train.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "train_tokenizer"
path = "src/bin/train_tokenizer.rs"

[dependencies]
# Inference Pipeline
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
tokenizers = "0.21.0"
candle-transformers = "0.8.2"
safetensors = "0.4.5"
rand = "0.8"
fastrand = "2.0"

# Async Orchestration
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"

# Memory & State
redb = "2.1.4"
fastembed = "4.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Utilities
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
half = { version = "2.4.1", features = ["num-traits"] }
fastrand = "2.0.0"
